# kakera_core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kakera.sln  kakera_core.sln  kakera_core.vcxproj  kakera_core.vcxproj.filters
include/: kakera_apis.h  kakera_declaration.h  kakera_element.h  kakera_event.h  kakera_file.h  kakera_main.h  kakera_scene.h  kakera_timer.h  kakera_window.h
include_private/: kakera_header.h  kakera_part_implementation.h  kakera_private_apis.h  kakera_private_apis.hpp  kakera_structs.hpp  kakera_tools.hpp
kakera/: kakera.vcxproj  kakera.vcxproj.filters
kakera/include/: kakera.h  kkr_header.h  kkr_struct.hpp  kkr_window.h
kakera/libs/: SDL2main.lib
kakera/src/: kkr_window.cpp
kakera_test/: kakera_test.vcxproj  main.cpp
src/: CMakeLists.txt  kakera_element.cpp  kakera_file.cpp  kakera_main.cpp  kakera_private_apis.cpp  kakera_scene.cpp  kakera_timer.cpp  kakera_tools.cpp  kakera_window.cpp
